--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "lab -v **/*.test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/code": "^7.0.0",
+    "@hapi/hapi": "^18.4.0",
+    "@hapi/lab": "^21.0.0",
     "bcrypt": "^3.0.7",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
@@ -18,14 +21,18 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "hapi-swagger": "^11.1.0",
+    "inert": "^5.1.3",
     "md5": "^2.2.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "path": "^0.12.7",
+    "redis": "^2.8.0",
     "session": "^0.1.0",
     "swagger-jsdoc": "^3.4.0",
     "swagger-ui-express": "^4.1.2",
-    "typeorm": "^0.2.20"
+    "typeorm": "^0.2.20",
+    "vision": "^5.4.4"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
